--- a/cl_python_lab.ipynb
+++ b/cl_python_lab.ipynb
@@ -842,7 +842,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### In case if something goes wrong after commiting the changes and we want to rollback the change, we can use 'rollback()' to remove previously commited config changes\n",
+    "#### Task 10: Rollback configuration changes\n",
+    "\n",
+    "In case if something goes wrong after commiting the changes and we want to rollback the change, we can use 'rollback()' to remove previously commited config changes\n",
     "\n",
     "To confirm the loopbacks are removed, we will use get_facts() method to print the interface list."
    ]
@@ -888,7 +890,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Task 10: Finally we will use the reset script to bring back all the devices to its original state. "
+    "#### Task 11: Reset lab config to default state\n",
+    "\n",
+    "Finally we will use the reset script to bring back all the devices to its original state. "
    ]
   },
   {
